--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -1,6 +1,7 @@
 body
 {
-    color: blue;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Ariel";
     font-size:16px;
@@ -12,22 +13,28 @@ body
     width:70%;
     padding: 0;
     text-align:left;
-    border:1px solid #ddd;
+    border:1px solid #DDD;
     margin:0 auto
 }
 #cabecera
 {
-    background: #33a;
-    box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
-    color:#fff;
-    font-weight:700;
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,.5);
+    color: white;
+    font-weight: bold;
     margin:0;
     padding:.5em
 }
 #cabecera #tagline{
+    
     padding: 0 0 0 1em;
+    font-weight: normal;
     font-size:.8em
 }
 #container h1{
     font-size: 20px
+}
+#post{
+    background: white;
+    padding: 1em;
 }
