--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -19,17 +19,18 @@ body
 #cabecera
 {
     background: #37488b;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,.5);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin:0;
-    padding:.5em
+    padding:0.5em;
 }
 #cabecera #logo{
     width: 20px;
     vertical-align: middle;
 }
-#cabecera #tagline{
+#cabecera #tagline
+{
     
     padding: 0 0 0 1em;
     font-weight: normal;
